made it so pawns cant jump over pieces on first move and fixed styling margins for entries

--- a/client/styles.css
+++ b/client/styles.css
@@ -107,6 +107,7 @@ button:hover {
 .history-title {
   padding-left: 1vw;
   padding-right: 1vw;
+  margin-bottom: 1vh;
   margin-top: 2vh;
   text-decoration: underline;
 }
@@ -114,7 +115,7 @@ button:hover {
 .history-entry {
   padding-left: 1vw;
   padding-right: 1vw;
-  margin-top: 1vh;
+  margin-bottom: 1vh;
 }
 
 /* Gets rid of scrollbar */
